# forCV

InternetUserIdentification/: FinalReport.ipynb  week1_prepare_dataset.ipynb  week2_analysis_hypotheses.ipynb  week3_visual_analysis_and_fe.ipynb  week4_training.ipynb  week5_sgd_kaggle.ipynb  week6_vowpal_wabbit.ipynb
RustToC++Comparison/JSON_Context/C++/: CMakeLists.txt  json_printer.cpp  json_printer.hpp  main.cpp  stl_container_ostream.hpp  test_runner.hpp  type_checking.hpp  visitor.hpp
RustToC++Comparison/JSON_Context/Rust/: Cargo.toml
RustToC++Comparison/JSON_Context/Rust/src/: lib.rs
